--- a/index.html
+++ b/index.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viström arbetsprov | Joacim Andersson</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        
+      <header>
+        <div class="top-nav">
+          <div class="top-nav-content flex justify-between uppercase">
+            <div class="top-nav-left flex">
+              <span>Fri frakt & fria returer</span>
+              <span>1-3 dagar leverans</span>
+            </div>
+            <div>
+              <ul class="flex">
+                <li><a href="#">Blogg</a></li>
+                <li><a href="#">Mitt konto</a></li>
+                <li><a href="#">Kundtjänst</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="main-nav-container">
+          <div class="main-nav flex justify-between uppercase">
+            <ul class="flex main-nav-left">
+              <li>Herr</li>
+              <li>Dam</li>
+              <li>Märken</li>
+              <li>Rea</li>
+            </ul>
+            <div class="main-nav-logo flex justify-center">Logo</div>
+            <ul class="flex main-nav-right">
+              <li>Sök</li>
+              <li>Lista (2)</li>
+              <li>Kundkorg (2) <i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main class="product-section">
+        <div class="product flex">
+          <div class="main-image-container">
+            <img src="./assets/img/main.png" alt="product-image" />
+          </div>
+
+          <div class="product-info-container">
+            <div class="top-section uppercase relative">
+              <div class="top-left-info-label">Nyhet</div>
+              <div class="is-in-stock">
+                <span>Finns i lager <i class="fa-solid fa-check"></i></span>
+              </div>
+            </div>
+            <div class="product-description">
+              <img src="./assets/img/Hackett.png" alt="Hackett" />
+              <h2>Hackett Garment Dyed Oxford Slim Fit Shirt White</h2>
+              <h3>999 kr</h3>
+              <div class="size-select flex justify-center">
+                <input type="checkbox" name="size" id="size-s" value="s" />
+                <label for="size-s">S</label>
+                <input type="checkbox" name="size" id="size-m" value="s" />
+                <label for="size-s">M</label>
+                <input type="checkbox" name="size" id="size-l" value="s" />
+                <label for="size-s">L</label>
+              </div>
+              <button class="uppercase">Lägg i varukorg</button>
+              <p class="uppercase">Artikelnummer: <span>HM3049957AL</span></p>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
-</body>
+    <script
+      src="https://kit.fontawesome.com/4cb68bf540.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
