--- a/index.html
+++ b/index.html
@@ -203,21 +203,82 @@
         </div>
       </div>
     </section>
-    <section class="subscribe flex">
-      <div class="subscribe__text">
-        <h2 class="uppercase">Få det senaste</h2>
-        <p>
-          Join our mailing list to stay up to date on new arrivals,
-          <br />promotions and all things
-        </p>
-      </div>
-      <div class="subscribe__form flex">
-        <form>
-          <input type="text" name="email" placeholder="E-postadress" />
-          <button class="uppercase">Skicka</button>
-        </form>
+    <section class="subscribe">
+      <div class="subscribe__contents flex">
+        <div class="subscribe__contents__text flex">
+          <h2 class="uppercase">Få det senaste</h2>
+          <p>
+            Join our mailing list to stay up to date on new arrivals,
+            <br />promotions and all things
+          </p>
+        </div>
+        <div class="subscribe__contents__form flex">
+          <form>
+            <input type="text" name="email" placeholder="E-postadress" />
+            <button class="uppercase">Skicka</button>
+          </form>
+        </div>
       </div>
     </section>
+    <section class="socials">
+      <div class="socials__content flex justify-between">
+        <a href="#"
+          ><div class="socials__content__facebook uppercase">Facebook</div></a
+        >
+        <a href="#"
+          ><div class="socials__content__instagram uppercase">Instagram</div></a
+        >
+        <a href="#"
+          ><div class="socials__content__nyhetsbrev uppercase">
+            Nyhetsbrev
+          </div></a
+        >
+      </div>
+    </section>
+    <footer>
+      <div class="footer__content">
+        <div class="footer__content__top">
+          <div class="shop">
+            <h4 class="uppercase">Shop</h4>
+            <ul>
+              <li><a href="#">Herr</a></li>
+              <li><a href="#">Dam</a></li>
+              <li><a href="#">Märken</a></li>
+              <li><a href="#">Rea</a></li>
+            </ul>
+          </div>
+          <div class="customer-service">
+            <h4 class="uppercase">Kundservice</h4>
+            <ul>
+              <li><a href="#">Order</a></li>
+              <li><a href="#">Betalning</a></li>
+              <li><a href="#">Frakt & leverans</a></li>
+              <li><a href="#">Returer</a></li>
+            </ul>
+          </div>
+
+          <div class="contact">
+            <h4 class="uppercase">Kontakt</h4>
+            <ul>
+              <li class="uppercase bold">Kontaktuppgifter</li>
+              <li>TEL: 0700 00 00 00</li>
+              <li>E-POST: info@foretaget.se</li>
+            </ul>
+          </div>
+          <div class="extra">
+            <ul>
+              <li class="uppercase bold">Viström Webb AB</li>
+              <li class="uppercase">Kungsgatan 9</li>
+              <li class="uppercase">541 30 Skövde</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__content__bottom">
+          <p><span>Detta är lite text som beskriver företaget för sökmotorer vilket resulterar i att vi rankar högre.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id veniam porro tempore dolores voluptate dolorem soluta itaque quia nesciunt vel, fugit, obcaecati voluptatibus perspiciatis ipsum distinctio impedit! Odio possimus ipsam, earum optio ratione ad debitis officia? Autem excepturi molestiae veniam voluptate aut eaque eveniet, nulla, qui distinctio.</p>
+        </div>
+        <p class="uppercase">Viström Webb AB &copy; 2017. Alla rättigheter reserverade</p>
+      </div>
+    </footer>
 
     <script src="js/script.js"></script>
     <script
