--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="related__card relative">
           <div class="top-left-info-label">Nyhet</div>
           <img
-            src="./assets/img/SS16_HM401415_951_01_thumb.png"
+            src="./assets/img/SS16_HM401415_951_01_thumb.jpg"
             alt="Hackett London"
           />
           <div class="related__card__info">
@@ -228,7 +228,7 @@
         <div class="related__card relative">
           <div class="top-left-info-label blue">Kampanj</div>
           <img
-            src="./assets/img/SS16_HM441696_869_01_thumb.png"
+            src="./assets/img/SS16_HM441696_869_01_thumb.jpg"
             alt="Hackett London"
           />
           <div class="related__card__info">
@@ -241,7 +241,7 @@
 
         <div class="related__card">
           <img
-            src="./assets/img/SS16_HM401400_561_01_thumb.png"
+            src="./assets/img/SS16_HM401400_561_01_thumb.jpg"
             alt="Hackett London"
           />
           <div class="related__card__info">
@@ -253,7 +253,7 @@
 
         <div class="related__card">
           <img
-            src="./assets/img/SS16_HM550478_595_01_thumb.png"
+            src="./assets/img/SS16_HM550478_595_01_thumb.jpg"
             alt="Hackett London"
           />
           <div class="related__card__info">
