fixed accordion clickable area

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="main-nav-mobile relative flex justify-between">
           <div class="mobile-sidebar">
             <div class="mobile-sidebar__contents">
-              <ul class="mobile-sidebar__contents__top-section">
+              <ul class="mobile-sidebar__contents__top-section uppercase">
                 <li><a href="#">Herr</a></li>
                 <li><a href="#">Dam</a></li>
                 <li><a href="#">Märken</a></li>
                 <li><a href="#">Rea</a></li>
               </ul>
-              <ul class="mobile-sidebar__contents__bottom-section">
+              <ul class="mobile-sidebar__contents__bottom-section uppercase">
                 <li><a href="#">Mitt konto</a></li>
                 <li><a href="#">Kundtjänst</a></li>
                 <li><a href="#">Blogg</a></li>
@@ -143,7 +143,8 @@
 
             <div class="accordion">
               <div class="accordion__row">
-                <div class="accordion__row__title flex justify-between">
+                <div class="accordion__row__title flex justify-between relative">
+                  <div class="click-catcher"></div>
                   <h2 class="uppercase">Produktbeskrivning</h2>
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
@@ -157,7 +158,8 @@
               </div>
 
               <div class="accordion__row">
-                <div class="accordion__row__title flex justify-between">
+                <div class="accordion__row__title flex justify-between relative">
+                  <div class="click-catcher"></div>
                   <h2 class="uppercase">Storlek & passform</h2>
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
@@ -171,7 +173,8 @@
               </div>
 
               <div class="accordion__row">
-                <div class="accordion__row__title flex justify-between">
+                <div class="accordion__row__title flex justify-between relative">
+                  <div class="click-catcher"></div>
                   <h2 class="uppercase">Tvätt & Skötselråd</h2>
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
@@ -185,7 +188,8 @@
               </div>
 
               <div class="accordion__row">
-                <div class="accordion__row__title flex justify-between">
+                <div class="accordion__row__title flex justify-between relative">
+                  <div class="click-catcher"></div>
                   <h2 class="uppercase">Leverans & Retur</h2>
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
